# Agentic-AI

./: .gitignore  README.md  langchain_rag.ipynb  pyproject.toml  resources.txt
main/Agents/: tools_agents.ipynb
main/Chat_bots/: groq.ipynb  groq_bot.ipynb
main/Rags/: langchain_rag.ipynb
main/Rags/Agentic_RAG/: d9ai.ipynb
main/Rags/Agentic_RAG/my_data/: info.md
main/Rags/Agentic_RAG/vector_store/faiss_index/: index.faiss  index.pkl
main/debugger/: agents.py  langgraph.json
main/debugger/.langgraph_api/: .langgraph_ops.pckl
main/langgraph/: 1_simple_graph.ipynb  2_graph_with_tools.ipynb  3_langgraph_agent.ipynb  4_pydantic.ipynb  5_Humaninloop.ipynb  6_personal_assistent.ipynb
