[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-groq>=0.2.4",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.74",
    "langgraph-cli[inmem]>=0.1.73",
    "python-dotenv>=1.0.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
